--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   width: 100%;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
   margin: 0;
 }
@@ -291,6 +291,7 @@ ul {
 
 .about {
   position: relative;
+  background-color: #E6C899;
 }
 .about__container {
   display: flex;
@@ -386,8 +387,6 @@ ul {
 
 .why-me__title {
   font-weight: 600;
-  font-size: 48px;
-  line-height: 65px;
   color: #5B5B5B;
   margin-bottom: 30px;
 }
@@ -463,6 +462,147 @@ ul {
   .why-me .card__text {
     font-size: 20px;
   }
+}
+
+.reviews {
+  background-color: #E6C899;
+}
+.reviews__title {
+  font-weight: 600;
+  color: #5B5B5B;
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .reviews__title {
+    font-size: calc(14px + 37.4 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 767px) {
+  .reviews__title {
+    font-size: calc(14px + 22 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 1440px) {
+  .reviews__title {
+    font-size: 36px;
+  }
+}
+
+.footer {
+  background-color: #1F1F1F;
+  padding-top: 50px;
+}
+.footer__container {
+  display: flex;
+  flex-direction: column;
+}
+.footer__top-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+.footer-title {
+  font-weight: 700;
+  line-height: 33px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+@media (max-width: 767px) {
+  .footer-title {
+    font-size: calc(12px + 20.4 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 767px) {
+  .footer-title {
+    font-size: calc(12px + 12 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 1440px) {
+  .footer-title {
+    font-size: 24px;
+  }
+}
+.footer .footer-list {
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 400;
+}
+.footer .footer-list__item {
+  margin-bottom: 10px;
+}
+@media (max-width: 767px) {
+  .footer .footer-list__item {
+    font-size: calc(10px + 10.2 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 767px) {
+  .footer .footer-list__item {
+    font-size: calc(10px + 6 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 1440px) {
+  .footer .footer-list__item {
+    font-size: 16px;
+  }
+}
+.footer__right-container {
+  display: flex;
+  flex-direction: column;
+}
+.footer__tel {
+  font-style: normal;
+  font-weight: 600;
+  line-height: 41px;
+  color: #006ED3;
+  margin-bottom: 15px;
+}
+@media (max-width: 767px) {
+  .footer__tel {
+    font-size: calc(16px + 23.8 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 767px) {
+  .footer__tel {
+    font-size: calc(16px + 14 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 1440px) {
+  .footer__tel {
+    font-size: 30px;
+  }
+}
+.footer__address {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #FFFFFF;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .footer__address {
+    font-size: calc(12px + 6.8 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 767px) {
+  .footer__address {
+    font-size: calc(12px + 4 * ((100vw - 320px) / 1120));
+  }
+}
+@media (min-width: 1440px) {
+  .footer__address {
+    font-size: 16px;
+  }
+}
+.footer__developer {
+  display: block;
+  text-align: center;
+  padding-bottom: 10px;
+  color: #FFFFFF;
+}
+.footer__developer a {
+  text-decoration: none;
+  color: #006ED3;
 }
 
 @media (min-width: 1440px) {
