--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ $maxWidth: $maxWidth - 320;
 
 body {
     width: 100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
     margin: 0;
 }
@@ -239,6 +239,7 @@ ul {
 
 .about {
     position: relative;
+    background-color: #E6C899;
 
     &__container {
         display: flex;
@@ -303,12 +304,13 @@ ul {
 }
 
 .why-me {
-
+    // background-image: url(./img/back.jpg);
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-color: #E6C899;
 
     &__title {
         font-weight: 600;
-        font-size: 48px;
-        line-height: 65px;
         color: #5B5B5B;
         margin-bottom: 30px;
         @include adaptiv-font(36, 14)
@@ -353,6 +355,92 @@ ul {
 
 
 }
+
+.reviews {
+    background-color: #E6C899;
+
+    &__title {
+        font-weight: 600;
+        color: #5B5B5B;
+        margin-bottom: 30px;
+        @include adaptiv-font(36, 14)
+    }
+
+}
+
+.footer {
+    background-color: #1F1F1F;
+    padding-top: 50px;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__top-container {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 40px;
+    }
+
+    &-title {
+        font-weight: 700;
+        line-height: 33px;
+        color: #FFFFFF;
+        margin-bottom: 20px;
+        @include adaptiv-font(24, 12)
+    }
+
+    .footer-list {
+        color: #FFFFFF;
+        font-style: normal;
+        font-weight: 400;
+
+        &__item {
+            margin-bottom: 10px;
+            @include adaptiv-font(16, 10)
+        }
+    }
+
+    &__right-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__tel {
+        font-style: normal;
+        font-weight: 600;
+        line-height: 41px;
+        color: #006ED3;
+        margin-bottom: 15px;
+        @include adaptiv-font(30, 16)
+    }
+
+    &__address {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        color: #FFFFFF;
+        text-align: center;
+        @include adaptiv-font(16, 12)
+    }
+
+    &__developer {
+        display: block;
+        text-align: center;
+        padding-bottom: 10px;
+        color: #FFFFFF;
+
+        a {
+            text-decoration: none;
+            color: #006ED3;
+        }
+    }
+
+}
+
+
 
 
 @media(min-width: 1440px) {
