--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,13 @@ ul {
     cursor: pointer;
 }
 
+.h2 {
+    font-weight: 600;
+    color: #5B5B5B;
+    margin-bottom: 30px;
+    @include adaptiv-font(36, 14)
+}
+
 .container {
     max-width: 1440px;
     padding: 0 50px;
@@ -68,9 +75,22 @@ ul {
 }
 
 .section {
-    padding-top: 50px;
+    padding-top: 150px;
     padding-bottom: 50px;
     background-color: #E5E5E5;
+}
+
+// волна
+.top-wave {
+    position: absolute;
+    height: 120px;
+    width: 100%;
+    top: -1px;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
@@ -240,6 +260,7 @@ ul {
 .about {
     position: relative;
     background-color: #E6C899;
+    padding-top: 70px;
 
     &__container {
         display: flex;
@@ -308,12 +329,10 @@ ul {
     // background-repeat: no-repeat;
     // background-size: cover;
     // background-color: #E6C899;
+    position: relative;
 
-    &__title {
-        font-weight: 600;
-        color: #5B5B5B;
-        margin-bottom: 30px;
-        @include adaptiv-font(36, 14)
+    &__top-wave {
+        transform: rotate(180deg);
     }
 
     &__list {
@@ -347,7 +366,8 @@ ul {
 
         &__text {
             font-weight: 500;
-            color: #000000;
+            color: #1D1D1A;
+            line-height: 27px;
             @include adaptiv-font(20, 10)
         }
 
@@ -358,12 +378,255 @@ ul {
 
 .reviews {
     background-color: #E6C899;
+    position: relative;
 
-    &__title {
-        font-weight: 600;
-        color: #5B5B5B;
+    &__wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .review {
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+
+        &__text-container {
+            display: flex;
+            flex-direction: column;
+            background-color: #FFFFFF;
+            border-radius: 50px;
+            font-weight: 400;
+            line-height: 22px;
+            color: #000000;
+            padding: 25px;
+            position: relative;
+            margin-bottom: 30px;
+            @include adaptiv-font(16, 10)
+        }
+
+        &__text-container::after {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: 100%;
+            right: 70px;
+            border-top: 20px solid #ffffff;
+            border-left: 20px solid transparent;
+        }
+
+        &__name {
+            font-style: italic;
+            font-weight: 700;
+            line-height: 20px;
+            color: #282828;
+            margin-top: 20px;
+            display: inline-block;
+            padding-right: 20px;
+            align-self: flex-end;
+            @include adaptiv-font(16, 10)
+        }
+
+        &__parent-img {
+            border: 5px #ffffff solid;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+        }
+
+    }
+
+}
+
+.formats {
+    position: relative;
+
+    // волна
+    &__top-wave {
+        transform: rotate(180deg);
+    }
+
+    // кнопки "Online" и "Очно"
+    &__types-buttons {
         margin-bottom: 30px;
-        @include adaptiv-font(36, 14)
+    }
+
+    &__type-btn {
+        padding: 10px;
+        background-color: transparent;
+        font-weight: 600;
+        color: #686868;
+        @include adaptiv-font(28, 12)
+    }
+    &__type-btn:first-child {
+        margin-right: 20px;
+        position: relative;
+    }
+    &__type-btn:first-child::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: calc(100% + 10px);
+        width: 1px;
+        height: 100%;
+        background-color: #000000;
+    }
+    &__type-btn.active {
+        color: #000000;
+    }
+
+    // табы
+    &__cards {
+        margin-bottom: 50px;
+    }
+
+    .format-card {
+        display: none;
+
+        &__img-wrap {
+            width: 48%;
+            border-radius: 50px;
+            overflow: hidden;
+        }
+
+        &__img {
+            width: 100%;
+        }
+
+        &__text-container {
+            width: 48%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        &__descr-wrapper {
+            margin-bottom: 30px;
+        }
+
+        &__title {
+            margin-bottom: 30px;
+            @include adaptiv-font(20, 14)
+        }
+        &__title span {
+            color: #03A513;
+        }
+
+        // цена
+        &__price {
+            font-style: normal;
+            font-weight: 600;
+            line-height: 33px;
+            color: #000000;
+            @include adaptiv-font(24, 14)
+        }
+
+        &__price span:not(:last-child) {
+            display: inline-block;
+            margin-right: 10px;
+        }
+
+        &__old-price {
+            display: inline-block;
+            position: relative;
+            @include adaptiv-font(20, 10)
+        }
+        &__old-price::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: red;
+        }
+        &__old-price::after {
+            transform: rotate(-20deg);
+        }
+        
+
+        &__new-price {
+            color: #03A513;
+            @include adaptiv-font(32, 14)
+        }
+
+
+    }
+    .format-card.active {
+        display: flex;
+        justify-content: space-between;
+    }
+
+}
+
+.form-section {
+    display: flex;
+    justify-content: center;
+    background-color: #E6C899;
+    position: relative;
+
+    &__arrow {
+        width: 360px;
+        height: 360px;
+        position: absolute;
+        top: -100px;
+        right: 0;
+        transform: rotate(150deg);
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        background-image: url(./img/form-background.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        border: 3px solid #ffffff;
+        border-radius: 30px;
+        padding: 40px 25px;
+
+        &__title {
+            margin-bottom: 30px;
+            @include adaptiv-font(24, 14)
+        }
+
+        &__inputs {
+            margin-bottom: 30px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__input {
+            background-color: #FFFFFF;
+            padding: 10px 20px;
+            border-radius: 25px;
+            border: none;
+            margin-bottom: 20px;
+        }
+
+        &__button {
+            justify-self: center;
+            align-self: center;
+            padding: 10px 25px;
+            display: inline-block;
+            width: 50%;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.35);
+            border-radius: 60px;
+            background-color: #ea5c54;
+            transition: background-color .3s ease, box-shadow .3s ease;
+
+            :hover {
+                background-color: #DD434F;
+                box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.35);
+            }
+        }
+
+        &__button:hover {
+            background-color: #DD434F;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.35);
+        }
+
     }
 
 }
@@ -399,6 +662,18 @@ ul {
         &__item {
             margin-bottom: 10px;
             @include adaptiv-font(16, 10)
+        }
+
+        &__link {
+            color: #FFFFFF;
+            transition: color .2s ease;
+        }
+
+        &__link:hover {
+            color: #006ED3;
+        }
+        &__link:focus {
+            color: #006ED3;
         }
     }
 
@@ -439,8 +714,6 @@ ul {
     }
 
 }
-
-
 
 
 @media(min-width: 1440px) {
