--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,10 @@ $maxWidth: $maxWidth - 320;
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
     width: 100%;
     font-family: 'Montserrat', sans-serif;
@@ -65,7 +69,7 @@ ul {
     font-weight: 600;
     color: #5B5B5B;
     margin-bottom: 30px;
-    @include adaptiv-font(36, 14)
+    @include adaptiv-font(36, 18)
 }
 
 .container {
@@ -93,19 +97,76 @@ ul {
     }
 }
 
+.scroll-forbidden {
+    overflow: hidden
+}
+
 
 .header {
     background: rgba(198, 221, 231, 0.8);
-    padding: 20px 0;
+    padding: 10px 0;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 5;
     width: 100%;
 
     &__container {
         display: flex;
         justify-content: space-between;
+    }
+
+    .burger {
+        display: none;
+        width: 36px;
+        height: 28px;
+        position: relative;
+        z-index: 20;
+        cursor: pointer;
+        align-self: center;
+
+        &::before,
+        &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        height: 4px;
+        background-color: #FFFFFF;
+        width: 36px;
+        transition: all .1s ease-in-out;
+        }
+        &::before {
+            top: 0;
+        }
+        &::after {
+            bottom: 0;
+            width: 24px;
+        }
+
+    }
+
+    .burger.burger--active::before {
+        transform: rotate(45deg);
+        top: 14px;
+    }
+      
+    .burger.burger--active::after {
+        transform: rotate(-45deg);
+        width: 100%;
+        top: 14px;
+    }
+      
+    .burger.burger--active span {
+        display: none;
+    }
+      
+    .burger span {
+        position: absolute;
+        left: 0;
+        height: 4px;
+        background-color: #FFFFFF;
+        width: 28.2px;
+        top: 12px;
     }
 
     .nav {
@@ -177,12 +238,6 @@ ul {
     padding-bottom: 100px;
     position: relative;
     overflow-y: hidden;
-
-    &__text-wrap {
-        // display: flex;
-        // flex-direction: column;
-        z-index: 2;
-    }
 
     &__title {
         display: inline-block;
@@ -325,10 +380,6 @@ ul {
 }
 
 .why-me {
-    // background-image: url(./img/back.jpg);
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-color: #E6C899;
     position: relative;
 
     &__top-wave {
@@ -336,9 +387,10 @@ ul {
     }
 
     &__list {
-        display: flex;
-        justify-content: space-between;
-        align-items: stretch;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+        gap: 30px;
         width: 100%;
     }
 
@@ -355,16 +407,18 @@ ul {
 
         &__title {
             display: inline-block;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             align-self: center;
             text-align: center;
             font-weight: 700;
             color: #000000;
-            @include adaptiv-font(24, 12)
+            min-height: 60px;
+            @include adaptiv-font(24, 16)
 
         }
 
         &__text {
+            padding: 0 20px;    
             font-weight: 500;
             color: #1D1D1A;
             line-height: 27px;
@@ -380,14 +434,8 @@ ul {
     background-color: #E6C899;
     position: relative;
 
-    &__wrapper {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-
     .review {
-        width: 400px;
+        // width: 400px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -438,6 +486,46 @@ ul {
 
     }
 
+}
+
+.swiper-outer {
+    position: relative;
+
+    .swiper-pagination-bullet {
+        width: 15px;
+        height: 15px;
+    }
+
+    .swiper-pagination-bullet-active {
+        background: #ffffff;
+    }
+
+}
+.swiper {
+    width: 100%;
+    height: auto;
+
+    &-slide {
+        width: 400px;
+    }
+
+    &-button-next {
+        padding: 10px;
+        right: -60px;
+        color: #FFFFFF;
+    }
+
+    &-button-prev {
+        padding: 10px;
+        left: -80px;
+        color: #FFFFFF;
+    }
+
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+    bottom: -60px;
+    display: none;
 }
 
 .formats {
@@ -508,7 +596,7 @@ ul {
 
         &__title {
             margin-bottom: 30px;
-            @include adaptiv-font(20, 14)
+            @include adaptiv-font(24, 16)
         }
         &__title span {
             color: #03A513;
@@ -568,6 +656,7 @@ ul {
     position: relative;
 
     &__arrow {
+        display: none;
         width: 360px;
         height: 360px;
         position: absolute;
@@ -605,6 +694,11 @@ ul {
             margin-bottom: 20px;
         }
 
+        &__input_massage {
+            padding-top: 20px;
+            min-height: 180px;
+        }
+
         &__button {
             justify-self: center;
             align-self: center;
@@ -634,6 +728,7 @@ ul {
 .footer {
     background-color: #1F1F1F;
     padding-top: 50px;
+    position: relative;
 
     &__container {
         display: flex;
@@ -706,6 +801,7 @@ ul {
         text-align: center;
         padding-bottom: 10px;
         color: #FFFFFF;
+        z-index: 100;
 
         a {
             text-decoration: none;
@@ -715,6 +811,7 @@ ul {
 
 }
 
+// MEDIA 
 
 @media(min-width: 1440px) {
     .hero {
@@ -727,10 +824,75 @@ ul {
         }
 
     }
+
 }
 
+@media(max-width: 1440px) {
+
+    .container {
+        max-width: 1124px;
+        padding: 0 50px;
+        margin: 0 auto;
+    }
+
+    .header {
+        padding-top: 5px;
+    }
+
+    .why-me {
+
+        &__list {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 40px;
+        }
+
+        .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+
+            &__img {
+                max-width: 400px;
+                width: 100%;
+            }
+        }
+
+    }
+
+}
+
+@media (max-width: 1200px) {
+    
+    .swiper {
+
+        &-button-next {
+            display: none;
+        }
+    
+        &-button-prev {
+            display: none;
+        }
+
+    }
+
+    .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+        display: block;
+    }
+
+
+}
 
 @media(max-width: 1024px) {
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .section {
+        padding-top: 120px;
+        padding-bottom: 30px;
+    }
 
     .header {
         padding: 15px 0;
@@ -741,4 +903,289 @@ ul {
         }
     }
 
+    .hero {
+        padding-bottom: 50px;
+        padding-top: 150px;
+
+        &__title {
+            width: 45%;
+            text-align: center;
+        }
+
+        &__ellipse {
+            bottom: -42px;
+            right: 13px;
+        }
+
+    }
+
+    .why-me {
+
+        &__list {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .card {
+            width: 100%;
+        }
+        
+    }
+
+    .formats {
+
+        .format-card {
+            flex-direction: column;
+            align-items: center;
+
+            &__img-wrap {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            &__text-container {
+                width: 100%;
+                padding: 0 20px;
+            }
+
+        }
+
+    }
+
+
+}
+
+@media(max-width: 769px) {
+
+    .header {
+
+        .burger {
+            display: block;
+        }
+        
+        .nav {
+            display: none;
+
+            &__link {
+                color: #FFFFFF;
+                font-size: 24px;
+                font-weight: 600;
+                margin-bottom: 20px;
+            }
+        }
+
+        .burger-nav--active {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            padding: 100px 50px;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 10;
+        }   
+
+
+    }
+
+    .hero {
+
+        &__title {
+            z-index: 0;
+            width: 70%;
+        }
+
+        &__text-wrap {
+            position: relative;
+            // z-index: 2;
+        }
+
+        &__img {
+            // z-index: 2;
+            max-width: 210px;
+        }
+
+    }
+
+    .about {
+        padding-top: 50px;
+
+        &__container {
+            flex-direction: column-reverse;
+            align-items: center;
+        }
+
+        &__text-wrap {
+            width: 90%;
+            position: static;
+            margin-bottom: 30px;
+
+            
+        }
+
+        &__text-wrap::after {
+            z-index: 1;
+        }
+
+    }
+
+    .form-section {
+
+        .form {
+            padding: 20px 15px;
+        }
+
+    }
+
+}
+
+@media(max-width: 600px) {
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .hero {
+
+        &__title {
+            width: 80%;
+        }
+
+        &__img {
+            max-width: 180px;
+            right: 10px;
+        }
+
+        &__ellipse {
+            right: -56px;
+        }
+
+        &__subtitle {
+            margin-bottom: 10px;
+        }
+
+        &__button {
+            position: relative;
+            z-index: 1;
+        }
+
+    }
+
+    .about {
+
+        &__img {
+            max-width: 240px;
+        }
+
+    }
+
+    .why-me {
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .card {
+            width: 100%;
+            align-items: center;
+
+            &__title {
+                text-align: left;
+                min-height: 0px;
+            }
+
+            &__img {
+                width: 100%;
+                max-width: 300px;
+            }
+
+            &__text {
+                padding: 0;
+                width: 80%;
+                text-align: center;
+            }
+
+        }
+        
+    }
+
+    .form-section {
+
+        .form {
+            
+            &__title {
+                text-align: center;
+            }
+
+        }
+
+    }
+
+}
+
+@media(max-width: 400px) {
+   
+    .hero {
+
+        &__title {
+            width: 90%;
+        }
+
+        &__img {
+            right: -20px;
+            z-index: 1;
+        }
+
+        &__button {
+            position: relative;
+            z-index: 3;
+        }
+
+    }
+
+}
+
+// footer waves styles
+@keyframes wave {
+    from, to {
+      transform: translate(-50%, 0%);
+    }
+    
+    50% {
+      transform: translate(-50%, -20%);
+    }
+}
+
+#bubble-wrapper {
+height: 100%;
+width: 100%;
+
+position: absolute;
+bottom: 0px;
+
+overflow: hidden;
+pointer-events: none;
+}
+
+.bubble {
+height: max(100px, 15vw);
+width: max(100px, 15vw);
+
+background-color: rgb(33, 150, 243);  
+border-radius: 100%;
+
+position: absolute;
+left: 50%;
+top: 100%;
+
+animation: wave 2s ease-in-out infinite;
+}
+
+@media(prefers-reduced-motion) {
+    .bubble {
+        animation: none;
+        display: none;
+    }
 }
